@@ -29,7 +29,8 @@
 ///////////////////////////////////////////////////////////////////////////////
 namespace boost {
 namespace wave {
-namespace cpp_token_sample {
+namespace cpplexer {
+namespace slex {
 namespace impl {
 
 ///////////////////////////////////////////////////////////////////////////////
@@ -130,7 +131,8 @@ public:
 };
 
 ///////////////////////////////////////////////////////////////////////////////
-}   // namespace cpp_token_sample
+}   // slex
+}   // namespace cpplexer
 }   // namespace wave
 }   // namespace boost
 
